testsuite/tests/parser/should_fail/pfail053.alan
MulDimArray() : proc
  foo(x : reference int[][2]) : proc
{}
